--- a/web/css/style.css
+++ b/web/css/style.css
@@ -70,7 +70,7 @@ body {
   }
   /* Space out the masthead */
   .header {
-    margin-bottom: 30px;
+    margin-bottom: 20px;
   }
   /* Remove the bottom border on the jumbotron for visual effect */
   .jumbotron {
@@ -85,4 +85,8 @@ body {
 .no-margin {
     margin-left: 0px !important;
     margin-right: 0px !important;
+}
+
+.label-margin {
+    margin: 2px 3px;
 }
