--- a/templates/checklist/form.html
+++ b/templates/checklist/form.html
@@ -1,24 +1,22 @@
 {% extends "layout.html" %}
 
 {% block content %}
-<div class="row marketing">
-    <form role="form" method="post" action="{{ app.request.baseUrl }}/checklists/create" class="col-lg-12 form-horizontal no-padding">
-        <div class="form-group">
-            <label for="checklist-name" class="col-sm-2 control-label">Name</label>
-            <div class="col-sm-10">
-                <input type="text" name="checklist[name]" class="form-control" id="checklist-name" placeholder="Name">
+<div class="row">
+    <form method="post" action="{{ app.request.baseUrl }}/checklists/create" class="col s12">
+        <div class="row">
+            <div class="input-field col s12">
+                <input id="checklist-name" type="text" name="checklist[name]" class="validate">
+                <label for="checklist-name" class="brown-text">Name</label>
             </div>
-        </div>
 
-        <div class="form-group step-input">
-            <label class="col-sm-2 control-label">Steps</label>
-            <div class="col-sm-10">
-                <input type="text" name="checklist[steps][]" class="form-control" placeholder="Step description (press enter to create new)">
+            <div class="input-field col s12 step-input">
+                <input id="checklist-step" type="text" name="checklist[steps][]" class="validate" placeholder="Step description (enter to create a new step)">
+                <label for="checklist-step" class="brown-text">Step Description</label>
             </div>
-        </div>
 
-        <div class="form-group no-margin">
-            <button type="submit" class="btn btn-success pull-right" href="#" role="button">Create</button>
+            <div class="input-field col s12">
+                <button type="submit" class="btn right brown">Create</button>
+            </div>
         </div>
     </form>
 </div>
@@ -26,11 +24,9 @@
 
 {% block scripts %}
 <script type="text/template" id="step-input-template">
-<div class="form-group step-input">
-    <div class="col-sm-2"></div>
-    <div class="col-sm-10">
-        <input type="text" name="checklist[steps][]" class="form-control" placeholder="Step description (press enter to create new)">
-    </div>
+<div class="input-field col s12 step-input brown-text">
+    <input id="checklist-step" type="text" name="checklist[steps][]" class="validate" placeholder="Step description (enter to create a new step)">
+    <label for="checklist-step">Step Description</label>
 </div>
 </script>
 
