--- a/templates/checklist/list.html
+++ b/templates/checklist/list.html
@@ -16,8 +16,8 @@
                 </span>
 
 
-                <div class="progress brown lighten-3">
-                    <div class="determinate brown darken-1" style="width: {{ checklist.getCompletionRate() }}%"></div>
+                <div class="progress teal lighten-3">
+                    <div class="determinate teal darken-1" style="width: {{ checklist.getCompletionRate() }}%"></div>
                 </div>
 
                 <div class="collection">
@@ -42,7 +42,7 @@
                 {% endif %}
 
                 {% if not checklist.isArchived() %}
-                <a href="{{ app.request.baseUrl }}/checklists/{{ checklist.getId() }}/archive" class="btn white brown-text" id="action-archive-checklist">Archive</a>
+                <a href="{{ app.request.baseUrl }}/checklists/{{ checklist.getId() }}/archive" class="btn white teal-text" id="action-archive-checklist">Archive</a>
                 {% endif %}
             </div>
         </div>
