--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="row">
-            <nav class="brown darken-1">
+            <nav class="teal">
                 <div class="nav-wrapper">
                     <div class="col s12">
                         <a href="{{ app.request.baseUrl }}/" class="brand-logo">Checklists</a>
